# swydd

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  hello.py  pyproject.toml  tasks.py
.github/workflows/: docs.yml  pypi.yml  release.yml  tests.yml
docs/: CNAME  index.html  swydd.py
docs/source/: api.rst  conf.py  index.rst
src/swydd/: __init__.py
tests/: test_operators.py  test_sub.py
tests/fixtures/: input.txt
