[project]
name = "swydd"
description = "swydd will yield desired deliverables"
authors = [
    {name = "Daylin Morgan", email = "daylinmorgan@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "swydd/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.6.2",
    "mypy>=1.8.0",
]

[tool.ruff]
select = ["E","F","I"]
ignore = ["E402"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_configs = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


